feat: Add QuickLinks and SocialLink components to the footer
feat: Enhance Header component with dropdown navigation and search functionality

feat: Implement Counter and CounterLayout components for displaying statistics

feat: Create FlashNewsCard and FlashNewsLayout components for news display

feat: Develop HomePagePara and KnowYourJourney components for homepage content

feat: Introduce LetUsKnow component for user inquiries

style: Update PageLayout to accept dynamic styles and banner links

fix: Adjust GradientBanner and HighlightedText components for better styling

chore: Refactor HomePage to integrate new components and improve structure

chore: Update Vite configuration for server settings

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   /* fbb990 */
   /*  bg gradiant color */
   /* Typography*/
-  --font-sans: "Plus Jakarta Sans", "Inter", "sans-serif";
+  --font-sans: "Plus Jakarta Sans", "Inter", "";
 
   --radius-2xl: 20px;
 }
