feat: Enhance HomePage and Programs components with new layouts and features
- Updated Footer component for improved styling.
- Refactored Header component with new dropdown items and hover effects.
- Introduced CarouselCard and CarouselLayout components for better carousel functionality.
- Modified Counter component for smoother animations and updated layout.
- Enhanced FlashNewsCard with hover effects and dynamic content.
- Updated FlashNewsLayout to display news details dynamically.
- Revamped KnowYourJourney component with detailed paths and improved UI.
- Added MarqueeContainer for showcasing partners.
- Created OurPride component to highlight achievements.
- Improved PathButton with hover effects and active state management.
- Introduced UpcomingEvent component as a placeholder for future events.
- Developed ProgramCard for displaying program details with hover effects.
- Added AnimatedButton for consistent button styling across the application.
- Enhanced GradientBanner and LetUsKnow components for better user interaction.
- Updated HomeBanner and ProgramsBanner for improved visuals and animations.
- Refactored CSS for better styling and added animations.
- Updated FlashNews page to reflect recent changes.
- Enhanced Programs page layout with new components.

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,80 @@
   --color-primary-highlight: #ff8a40;
   --color-secondary: #2d415c;
   --color-secondary-white: #e3e3e3;
-  /* fbb990 */
-  /*  bg gradiant color */
   /* Typography*/
   --font-sans: "Plus Jakarta Sans", "Inter", "";
-
   --radius-2xl: 20px;
+}
+@property --angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 0deg;
+}
+.animated-button {
+  position: relative;
+  background-color: #652e2e;
+}
+
+.animated-button::after {
+  content: "";
+  position: absolute;
+  inset: -0.15rem;
+  border-radius: inherit;
+  background: conic-gradient(
+    from var(--angle),
+    #663719 0%,
+    #703e1c 4%,
+    #7f4520 8%,
+    #8b4c23 12%,
+    #995226 16%,
+    #a65829 20%,
+    #b2602c 24%,
+    #bb6b2f 27%,
+    #b8682e 30%,
+    #b2602c 33%,
+    #a65829 37%,
+    #995226 41%,
+    #8b4c23 45%,
+    #7f4520 49%,
+    #703e1c 53%,
+    #663719 57%,
+    #663719 100%
+  );
+  z-index: -1;
+  animation: animate 3s linear infinite;
+}
+
+.animated-button::before {
+  content: "";
+  position: absolute;
+  inset: -0.15rem;
+  border-radius: inherit;
+  background: conic-gradient(
+    from 0deg,
+
+    #995226 0%,
+    #a65829 12%,
+    #b2602c 24%,
+    #bb6b2f 36%,
+    #b8682e 48%,
+    #b2602c 60%,
+    #a65829 72%,
+    #995226 100%
+  );
+  z-index: -1;
+  animation: animate 3s linear infinite;
+}
+
+.animated-button::before {
+  filter: blur(3px);
+  opacity: 0.8;
+}
+
+@keyframes animate {
+  0% {
+    --angle: 0deg;
+  }
+  100% {
+    --angle: 360deg;
+  }
 }
