Add new images, SVGs, and enhance page components
- Added new logo images for ProgramBrief.
- Introduced a new SVG file for the knowUsGradient.
- Implemented custom hooks: useScrollToTop and useTitle for improved navigation and SEO.
- Updated App component to utilize new hooks.
- Refactored Footer and HomePage components for better structure and performance.
- Enhanced UpcomingEvents component with smoother transitions and adjusted auto-scroll delay.
- Improved FAQ component with better text truncation and hover effects.
- Updated OurOfferings component to use SVG icons and adjusted layout.
- Added DirectorsData for Board of Directors page and implemented a new layout.
- Enhanced ProgramOverview page with a new title container and improved layout.
- Updated CSS for better styling and added faded container effects.
- Fixed minor bugs and improved overall code quality.

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,32 @@ body {
   z-index: -1;
   animation: animate 3s linear infinite;
 }
-
+.faded-container {
+  position: relative;
+}
+.faded-container::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 10px; /* adjust as needed */
+  background: linear-gradient(to bottom, transparent 0%, #f1f1f1 100%);
+  pointer-events: none;
+  z-index: 2;
+}
+.faded-container::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  padding: right 20px;
+  height: 10px; /* adjust as needed */
+  background: linear-gradient(to top, transparent 0%, #f1f1f1 100%);
+  pointer-events: none;
+  z-index: 2;
+}
 .animated-button::before {
   content: "";
   position: absolute;
