feat: Enhance PastEventsCarousel layout and update styles in FlashNews and UpcomingEvents pages

--- a/src/index.css
+++ b/src/index.css
@@ -245,7 +245,7 @@ body {
   --popover-foreground: oklch(0.145 0 0);
   --primary: #6c3231;
   --primary-foreground: ;
-  --secondary: oklch(0.97 0 0);
+  --secondary: #2d415c;
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
