--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,13 @@ body {
 .Toastify__progress-bar {
   background: #6c3231 !important;
 }
-
+@font-face {
+  font-family: "Plus Jakarta Sans";
+  src: url("/Fonts/Plus_Jakarta_Sans/PlusJakartaSans-VariableFont_wght.ttf")
+    format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
 @theme {
   /* Colors */
   --color-primary: #6c3231;
@@ -17,7 +23,7 @@ body {
   --color-secondary-gray: #e3e3e3;
   --color-secondary-blue: #2d415c;
   /* Typography*/
-  --font-sans: "Plus Jakarta Sans", "Inter", "";
+  --font-sans: "Plus Jakarta Sans", "Inter", san-serif;
   --radius-2xl: 20px;
 }
 @property --angle {
@@ -108,11 +114,11 @@ body {
   @keyframes bar {
     0% {
       height: 0px;
-      opacity:20%;
+      opacity: 20%;
     }
 
     100% {
-      opacity:100%;
+      opacity: 100%;
       height: 100%;
     }
   }
